# WalDrive

./: .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.mjs  index.html  next.config.ts  package.json  skills-lock.json  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
cli/: package.json  tsconfig.json
cli/src/: index.ts  wallet.ts
contracts/: Move.toml
contracts/sources/: access.move  file_record.move  folder.move  share_link.move
contracts/tests/: file_record_tests.move
mcp-server/: .env.example  package.json
mcp-server/src/: index.ts
site/: index.html  ws-resources.json
skills/waldrive/: SKILL.md
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/components/: AccountSwitcher.tsx  BrandMark.tsx  DemoBanner.tsx  EmptyState.tsx  FaucetBanner.tsx  FileGrid.tsx  FileList.tsx  FolderNav.tsx  Onboarding.tsx  PreviewBody.tsx  PreviewModal.tsx  SettingsModal.tsx  Sidebar.tsx  StoragePanel.tsx  TitleBar.tsx  UploadZone.tsx  WalletPanel.tsx
src/hooks/: useBalance.ts  useBlobSource.ts  useDelete.ts  useFaucet.ts  useFiles.ts  useFolder.ts  useFolders.ts  useRename.ts  useRenew.ts  useShare.ts  useTags.ts  useUpload.ts  useVersion.ts  useVersionHistory.ts
submission/: .gitignore  WalDrive-deck.pptx  competitive-research.md
video/: .gitignore  README.md  package.json  tsconfig.json
(+108 files in other folders)
